--- a/LeetCode/Problems/Problems.csproj
+++ b/LeetCode/Problems/Problems.csproj
@@ -40,6 +40,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="001. Two Sum\Problem001.cs" />
+        <Compile Include="020. Valid Parentheses\Problem020.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
