Problem021 empty_node test pass

--- a/LeetCode/Problems/Problems.csproj
+++ b/LeetCode/Problems/Problems.csproj
@@ -41,6 +41,7 @@
     <ItemGroup>
         <Compile Include="001. Two Sum\Problem001.cs" />
         <Compile Include="020. Valid Parentheses\Problem020.cs" />
+        <Compile Include="021. Merge Two Sorted Lists\Problem021.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
