--- a/LeetCode/Problems/Problems.csproj
+++ b/LeetCode/Problems/Problems.csproj
@@ -45,6 +45,7 @@
         <Compile Include="100. Same Tree\Problem100.cs" />
         <Compile Include="121. Best Time to Buy and Sell Stock\Problem121.cs" />
         <Compile Include="206. Reverse Linked List\Problem206.cs" />
+        <Compile Include="Models\ListNode.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
